Options page added

--- a/MH-MapTool/manifest.json
+++ b/MH-MapTool/manifest.json
@@ -10,18 +10,36 @@
   },
 
   "page_action": {
-	"default_icon": "icon-128.png"
+	"default_icon": "icon-128.png",
+	"default_title": "Maptool"
   },
 
-  "background": { "page": "background.html" },
-  "permissions": [ "tabs", "http://*.mechhero.com/World.aspx*", "http://*.mechhero.com/Navigation.aspx*", "http://*.mechhero.pl/World.aspx*", "http://*.mechhero.pl/Navigation.aspx*" ],
+  "options_ui" : {
+		"page" : "options.html",
+		"chrome_style" : true
+  },
+  "options_page": "options.html",
+  "background": { 
+	"scripts": ["background.js"],
+	"persistent": false 
+  },
+  
+  "permissions": [ 
+	"tabs", "declarativeContent", "storage",
+	"http://*.mechhero.com/World.aspx*",
+	"http://*.mechhero.com/Navigation.aspx*",
+	"http://*.mechhero.pl/World.aspx*",
+	"http://*.mechhero.pl/Navigation.aspx*",
+	"http://*.mechhero.eu/World.aspx*",
+	"http://*.mechhero.eu/Navigation.aspx*"
+  ],
   
   "content_scripts" : [{
-        "matches" : [ "http://*.mechhero.com/World.aspx*", "http://*.mechhero.pl/World.aspx*"],
+        "matches" : [ "http://*.mechhero.com/World.aspx*", "http://*.mechhero.pl/World.aspx*", "http://*.mechhero.eu/World.aspx*"],
         "js" : ["mapscript.js"],
         "css" : ["maptool.css"]
     },
-	{	"matches" : [ "http://*.mechhero.com/Navigation.aspx*", "http://*.mechhero.pl/Navigation.aspx*"],
+	{	"matches" : [ "http://*.mechhero.com/Navigation.aspx*", "http://*.mechhero.pl/Navigation.aspx*", "http://*.mechhero.eu/Navigation.aspx*"],
         "js" : ["navscript.js"],
         "css" : ["maptool.css"]
 	}],
